store/kubernetes/ingress-virtual.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata: 
  name: "gateway-ingress"
  namespace: "istio-system"
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
    - host: "capstone.gateway.com"
      http: 
        paths: 
          - 
            path: /
            pathType: Prefix
            backend: 
              serviceName: gateway
              servicePort: 8080
