store/kubernetes/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata: 
  name: "shopping-ingress"
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
    - 
      http: 
        paths: 
          -
            path: /
            pathType: Prefix
            backend:
              serviceName: frontend
              servicePort: 8080
          - 
            path: /orders
            pathType: Prefix
            backend: 
              serviceName: order
              servicePort: 8080
          - 
            path: /deliveries
            pathType: Prefix
            backend: 
              serviceName: delivery
              servicePort: 8080
          - 
            path: /stores
            pathType: Prefix
            backend: 
              serviceName: stores
              servicePort: 8080
          -
            path: /payments
            pathType: Prefix
            backend:
              serviceName: payments
              servicePort: 8080
