store/kubernetes/order-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-gateway
  namespace: msa
spec:
  hosts:
  - "*"
  gateways:
  - front-gateway
  http:
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        host: order
        port:
          number: 8080
