store/kubernetes/store-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store-gateway
  namespace: msa
spec:
  hosts:
  - "*"
  gateways:
  - front-gateway
  http:
  - match:
    - uri:
        prefix: /stores
    route:
    - destination:
        host: store
        port:
          number: 8080
